@@ -1,3 +1,11 @@
+20/04/2023:
+	- CVT now uses same header create function as all other commands, thereby adding missing CORS headers
+	  (Fixes: https://github.com/ruven/iipsrv/issues/256). Also removed obsolete chunking code from CVT.cc
+	  (chunking no longer supported in HTTP/2).
+	- Changed Content-Disposition file name to add size information and allow browser download via "attachment"
+	  type when a POST request is received.
+
+
 06/04/2023:
 	- Added ability to serve DPI information through metadata retrieval via OBJ class and through physical dimensions
 	  service for IIIF info.json
